<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">LG Motion Recovery Installer</string>
    <string name="app_intro">This app is to help with the Factory Reset issue when booting to true CWM Recovery.\n You can backup data before booting to CWM and restore while you\'re in CWM\, or from this app.</string>
    <string name="warning">WARNING!!!!</string>
    <string name="warning_info">Rebooting to CWM Recovery will do a Factory Reset and you will loose all of your apps and data.\n Make a backup with the button above or make sure you already have a backup\, and/or prepared to loose everything!</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="about_label">About</string>
    <string name="about_title"><b>About</b></string>
    <string name="about_text">Recovery Installer is a  simple app for those who wish to use the flashed ClockworkMod Recovery on the LG Motion MS770.</string>
    <string name="about_version_label"><b>Version</b></string>
    <string name="about_version">\nv1.0</string>
    <string name="about_author_label"><b>Author</b></string>
    <string name="about_author">\nDewayne Jones (PlayfulGod)</string>
    <string name="copyright">Copyright&#169;2013 TechyGeek &#38; MGD LLC\nAll Rights Reserved</string>
    <string name="about_disclaimer">All rights reserved. Not liable for any damage incurred from
        use of this software including but not limited to\: monetary loss\,
        temporary paralysis\, halitosis\, spontaneous combustion\,
        road rash\, grey hair\, premature hair loss\, or cross-eyed\'iness</string>
</resources>
